fix: add scrollbar height

--- a/tiddlers/Config/config/oeyoews/scrollbar.css
+++ b/tiddlers/Config/config/oeyoews/scrollbar.css
@@ -17,6 +17,7 @@ html {
 ::-webkit-scrollbar,
   scrollbar-width {
   width: 5px;
+		height: 7px;
 }
 
 ::-webkit-scrollbar:hover,
